--- a/src/main/resources/application-dev-gcp.yml
+++ b/src/main/resources/application-dev-gcp.yml
@@ -30,6 +30,7 @@ spring:
   flyway:
     baselineOnMigrate: true
     enabled: true
+    clean-on-validation-error: true
   jpa:
     show-sql: true
     properties:
