Legger til støtte for integrasjon mot k9-selvbetjening-oppslag. Bruker wiremock som mock-server.

--- a/nais/naiserator.yml
+++ b/nais/naiserator.yml
@@ -15,6 +15,7 @@ spec:
         - host: oauth2.googleapis.com
         - host: www.googleapis.com
         - host: login.microsoftonline.com
+        - host: api-gw-q1.oera.no
       rules: []
   secrets:
     - name: gcp.accesskey
