--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,47 @@ networks:
     external:
       name: sif.docker-internal
 services:
+  flex-oidc-provider-gui:
+    container_name: flex-oidc-provider-gui
+    networks:
+      sif.docker-internal:
+        aliases:
+          - flex-oidc-provider-gui.sif.docker-internal
+    image: "docker.pkg.github.com/navikt/flex-docker-compose/flex-oidc-provider-gui:latest"
+    ports:
+      - "5000:5000"
+    depends_on:
+      - oidc-provider
+    environment:
+      REDIRECT_URL: "http://localhost:8080"
+      AUTO_REDIRECT_TO_FRONTEND: "true"
+
+  oidc-provider:
+    container_name: oidc-provider
+    networks:
+      sif.docker-internal:
+        aliases:
+          - oidc-provider.sif.docker-internal
+    image: "docker.pkg.github.com/navikt/flex-docker-compose/flex-stub-oidc-provider:latest"
+    ports:
+      - "9000:9000"
+    environment:
+      PORT: "9000"
+      CALLBACK_URL: "http://localhost:5000/callback"
+      ISSUER: "https://localhost:9000"
+
+  wiremock:
+    container_name: wiremock
+    networks:
+      sif.docker-internal:
+        aliases:
+          - wiremock.sif.docker-internal
+    image: "rodolpheche/wiremock"
+    volumes:
+    - "./wiremock/stubs:/home/wiremock"
+    ports:
+      - "8000:8080"
+
   db:
     container_name: db
     image: 'postgres'
@@ -12,6 +53,7 @@ services:
         aliases:
           - db.sif.docker-internal
     restart: on-failure
+    hostname: localhost
     ports:
       - "5432:5432"
     environment:
@@ -29,5 +71,6 @@ services:
       - sif-innsyn-api.env
     ports:
       - "8080:8080"
+    hostname: localhost
     depends_on:
       - db
