--- a/nais/naiserator.yml
+++ b/nais/naiserator.yml
@@ -49,7 +49,7 @@ spec:
     enabled: false
   webproxy: true
   envFrom:
-    - secret: apigw-api-key
+    - secret: sif-innsyn-api
   env:
   {{#each env}}
    - name: {{@key}}
