Konfigurerer kafka integrasjon mot docker-compose.

--- a/src/main/resources/application-dev-gcp.yml
+++ b/src/main/resources/application-dev-gcp.yml
@@ -55,20 +55,20 @@ spring:
         registry:
           url:   https://kafka-schema-registry.nais.adeo.no
       security:
-        protocol: SASL_SSL
+        protocol: #SASL_SSL
       sasl:
         mechanism: PLAIN
         jaas:
-          config: org.apache.kafka.common.security.plain.PlainLoginModule required username=${kafka.username} password=${kafka.password};
+          config: org.apache.kafka.common.security.plain.PlainLoginModule required username=igroup password=itest;
     consumer:
       enable-auto-commit: false
-      bootstrap-servers: b27apvl00045.preprod.local:8443,b27apvl00046.preprod.local:8443,b27apvl00047.preprod.local:8443
+      bootstrap-servers: #b27apvl00045.preprod.local:8443,b27apvl00046.preprod.local:8443,b27apvl00047.preprod.local:8443
       group-id: group_id
       auto-offset-reset: earliest
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-    producer:
-      bootstrap-servers: b27apvl00045.preprod.local:8443,b27apvl00046.preprod.local:8443,b27apvl00047.preprod.local:8443
-      key-serializer: io.confluent.kafka.serializers.KafkaAvroSerializer
-      value-serializer: io.confluent.kafka.serializers.KafkaAvroSerializer
-      transaction-id-prefix: tx.
+#    producer:
+#      bootstrap-servers: #b27apvl00045.preprod.local:8443,b27apvl00046.preprod.local:8443,b27apvl00047.preprod.local:8443
+#      key-serializer: io.confluent.kafka.serializers.KafkaAvroSerializer
+#      value-serializer: io.confluent.kafka.serializers.KafkaAvroSerializer
+#      transaction-id-prefix: tx.
