--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,70 @@
 version: '3'
 networks:
-  sif.docker-internal:
-    external:
-      name: sif.docker-internal
+  app-tier:
+    driver: bridge
 services:
+  openldap:
+    container_name: ldap
+    build: ./docker-compose-env/ldap
+    networks:
+      - app-tier
+    ports:
+      - "10636:636"
+      - "10389:389"
+    environment:
+      - "LDAP_TLS_VERIFY_CLIENT=try"
+
+  zookeeper:
+    #image: confluentinc/cp-zookeeper
+    container_name: zookeeper
+    build: ./docker-compose-env/zookeeper
+    networks:
+      - app-tier
+    env_file:
+      - "./docker-compose-env/zookeeper.env"
+    ports:
+      - "2181:2181"
+
+  kafka:
+    container_name: kafka
+    build: ./docker-compose-env/kafka
+    networks:
+      - app-tier
+    env_file:
+      - "./docker-compose-env/kafka.env"
+    ports:
+      - "9092:9092"
+      - "9093:9093"
+    depends_on:
+      - zookeeper
+      - openldap
+
+  kafkadminrest:
+    image: "navikt/kafka-adminrest"
+    networks:
+      - app-tier
+    ports:
+      - "8840:8080"
+    env_file:
+      - "./docker-compose-env/kafka-admin-rest.env"
+    command: bash apply-oneshot.sh
+
+  schema-registry:
+    image: "confluentinc/cp-schema-registry:5.0.1"
+    networks:
+      - app-tier
+    depends_on:
+      - zookeeper
+      - kafka
+    ports:
+      - "8081:8081"
+    env_file:
+      - "./docker-compose-env/schema-registry.env"
+
   flex-oidc-provider-gui:
     container_name: flex-oidc-provider-gui
     networks:
-      sif.docker-internal:
-        aliases:
-          - flex-oidc-provider-gui.sif.docker-internal
+      - app-tier
     image: "docker.pkg.github.com/navikt/flex-docker-compose/flex-oidc-provider-gui:latest"
     ports:
       - "5000:5000"
@@ -22,9 +77,7 @@ services:
   oidc-provider:
     container_name: oidc-provider
     networks:
-      sif.docker-internal:
-        aliases:
-          - oidc-provider.sif.docker-internal
+      - app-tier
     image: "docker.pkg.github.com/navikt/flex-docker-compose/flex-stub-oidc-provider:latest"
     ports:
       - "9000:9000"
@@ -36,12 +89,10 @@ services:
   wiremock:
     container_name: wiremock
     networks:
-      sif.docker-internal:
-        aliases:
-          - wiremock.sif.docker-internal
+      - app-tier
     image: "rodolpheche/wiremock"
     volumes:
-    - "./wiremock/stubs:/home/wiremock"
+      - "./wiremock/stubs:/home/wiremock"
     ports:
       - "8000:8080"
 
@@ -49,9 +100,7 @@ services:
     container_name: db
     image: 'postgres'
     networks:
-      sif.docker-internal:
-        aliases:
-          - db.sif.docker-internal
+      - app-tier
     restart: on-failure
     hostname: localhost
     ports:
@@ -63,12 +112,10 @@ services:
     container_name: sif-innsyn-api
     image: 'sif-innsyn-api-local:latest'
     networks:
-      sif.docker-internal:
-        aliases:
-          - sif-innsyn-api.sif.docker-internal
+      - app-tier
     restart: on-failure
     env_file:
-      - sif-innsyn-api.env
+      - ./docker-compose-env/sif-innsyn-api.env
     ports:
       - "8080:8080"
     hostname: localhost
