Setter STS credentials fra miljø.

--- a/docker-compose-env/sif-innsyn-api.env
+++ b/docker-compose-env/sif-innsyn-api.env
@@ -4,6 +4,8 @@ SPRING_KAFKA_CONSUMER_BOOTSTRAP_SERVERS=kafka:9093
 SPRING_KAFKA_PROPERTIES_SECURITY_PROTOCOL=SASL_PLAINTEXT
 
 APIGW_API_KEY=x-nav-apiKey
+STS_USERNAME=igroup
+STS_PASSWORD=itest
 K9_OPPSLAG_REGISTER_URL=http://wiremock:8080/k9-selvbetjening-oppslag-mock
 NO_NAV_SECURITY_JWT_ISSUER_SELVBETJENING_ACCEPTEDAUDIENCE=stubOidcClient
 NO_NAV_SECURITY_JWT_ISSUER_SELVBETJENING_COOKIE_NAME=selvbetjening-idtoken
