--- a/docker-compose-env/sif-innsyn-api.env
+++ b/docker-compose-env/sif-innsyn-api.env
@@ -10,6 +10,7 @@ K9_OPPSLAG_REGISTER_URL=http://wiremock:8080/k9-selvbetjening-oppslag-mock
 NO_NAV_SECURITY_JWT_ISSUER_SELVBETJENING_ACCEPTEDAUDIENCE=stubOidcClient
 NO_NAV_SECURITY_JWT_ISSUER_SELVBETJENING_COOKIE_NAME=selvbetjening-idtoken
 NO_NAV_SECURITY_JWT_ISSUER_SELVBETJENING_DISCOVERYURL=http://oidc-provider:9000/.well-known/openid-configuration
+NO_NAV_SECURITY_CORS_ALLOWED_ORIGINS=http://localhost:8080
 
 NAIS_DATABASE_SIF_INNSYN_API_SIF_INNSYN_DB_HOST=db
 NAIS_DATABASE_SIF_INNSYN_API_SIF_INNSYN_DB_PORT=5432
