--- a/docker-compose-env/sif-innsyn-api.env
+++ b/docker-compose-env/sif-innsyn-api.env
@@ -6,6 +6,9 @@ SPRING_KAFKA_PROPERTIES_SECURITY_PROTOCOL=SASL_PLAINTEXT
 APIGW_API_KEY=x-nav-apiKey
 STS_USERNAME=igroup
 STS_PASSWORD=itest
+NAV_TRUSTSTORE_PATH=/etc/ssl/certs/java/cacerts
+NAV_TRUSTSTORE_PASSWORD=changeme
+
 K9_OPPSLAG_REGISTER_URL=http://wiremock:8080/k9-selvbetjening-oppslag-mock
 NO_NAV_SECURITY_JWT_ISSUER_SELVBETJENING_ACCEPTEDAUDIENCE=stubOidcClient
 NO_NAV_SECURITY_JWT_ISSUER_SELVBETJENING_COOKIE_NAME=selvbetjening-idtoken
