--- a/src/main/resources/application-dev-gcp.yml
+++ b/src/main/resources/application-dev-gcp.yml
@@ -69,6 +69,9 @@ spring:
       auto-offset-reset: earliest
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      ssl:
+        trust-store-location: ${NAV_TRUSTSTORE_PATH}
+        trust-store-password: ${NAV_TRUSTSTORE_PASSWORD}
 #    producer:
 #      bootstrap-servers: #b27apvl00045.preprod.local:8443,b27apvl00046.preprod.local:8443,b27apvl00047.preprod.local:8443
 #      key-serializer: io.confluent.kafka.serializers.KafkaAvroSerializer
