--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -14,15 +14,14 @@ spring:
       initialDelay: 10
       maxDelay: 40
       maxAttempts: 3
-  datasource:
-    url: jdbc:tc:postgresql:9.6.8:///sif-innsyn-db
-    driver-class-name: org.testcontainers.jdbc.ContainerDatabaseDriver
   flyway:
     enabled: true
-    baselineOnMigrate: true
   jpa:
-    hibernate:
-      ddl-auto: create-drop
+    show-sql: true
+    database-platform: org.hibernate.dialect.PostgreSQL9Dialect
   kafka:
     consumer:
       group-id: group_id
+#logging:
+#  level:
+#    root: DEBUG
