--- a/src/test/resources/bootstrap-test.yml
+++ b/src/test/resources/bootstrap-test.yml
@@ -1,7 +1,13 @@
+embedded.postgresql.enabled: true
 spring:
-   cloud:
-      gcp:
-         core:
-            enabled: false
-         secretmanager:
-            enabled: false
+  cloud:
+    gcp:
+      core:
+        enabled: false
+      secretmanager:
+        enabled: false
+  datasource:
+    url: jdbc:postgresql://${embedded.postgresql.host}:${embedded.postgresql.port}/${embedded.postgresql.schema}
+    username: ${embedded.postgresql.user}
+    password: ${embedded.postgresql.password}
+    driver-class-name: org.postgresql.Driver
