--- a/src/main/resources/application-dev-gcp.yml
+++ b/src/main/resources/application-dev-gcp.yml
@@ -27,11 +27,8 @@ spring:
       initialDelay: 1000
       maxDelay: 4000
       maxAttempts: 3
-
   application:
     name: sif-innsyn-api
-  http:
-    log-request-details: true
   datasource:
     hikari:
       connection-test-query: SELECT 1
@@ -74,3 +71,5 @@ spring:
       ssl:
         trust-store-location: file:${javax.net.ssl.trustStore}
         trust-store-password: ${javax.net.ssl.trustStorePassword}
+  mvc:
+    log-request-details: true
