--- a/src/main/resources/application-dev-gcp.yml
+++ b/src/main/resources/application-dev-gcp.yml
@@ -16,7 +16,7 @@ management:
    endpoints:
       web:
          exposure:
-            include: '*'
+            include: health, prometheus
    endpoint:
       health:
          show-details: always
