Leser earliest fra kafka i test.

--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -34,5 +34,6 @@ spring:
       retry-interval: 5_000 # Egendefinert property
       group-id: group_id
       #client-id: sif-innsyn-api
+      auto-offset-reset: earliest
 wiremock:
   reset-mappings-after-each-test: true
