--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -1,8 +1,13 @@
 no.nav:
   apigw:
     apikey: test-key
+    sts-apikey: sts-apikey
   gateways:
     k9-selvbetjening-oppslag: http://localhost:8000/k9-selvbetjening-oppslag-mock
+    sts:
+      url: http://localhost:8000/security-token-service
+      username: sts-username
+      password: sts-password
   security:
     jwt:
       issuer:
