--- a/src/main/resources/application-dev-gcp.yml
+++ b/src/main/resources/application-dev-gcp.yml
@@ -1,4 +1,11 @@
 no.nav:
+  dittnav:
+    pleiepenger-sykt-barn:
+      beskjed:
+        grupperingsId: pleiepenger-sykt-barn
+        tekst: 'Vi har mottatt din søknad om pleiepenger. Klikk på linken for mer info.'
+        link: https://sif-innsyn.dev.nav.no/familie/sykdom-i-familien/soknad/innsyn
+        dagerSynlig: 7
   apigw:
     apikey: ${APIGW_API_KEY} # kubectl secret
     sts-apikey: ${STS_APIKEY} # kubectl secret
