--- a/src/main/resources/application-dev-gcp.yml
+++ b/src/main/resources/application-dev-gcp.yml
@@ -65,7 +65,7 @@ spring:
     properties:
       schema:
         registry:
-          url: https://kafka-schema-registry.nais.preprod.local
+          url: https://kafka-test-schema-registry.nais-q.adeo.no
       security:
         protocol:
       sasl:
