Konfigurerer port og protokoll for SR i utgående trafikk.

--- a/src/main/resources/application-dev-gcp.yml
+++ b/src/main/resources/application-dev-gcp.yml
@@ -65,7 +65,7 @@ spring:
     properties:
       schema:
         registry:
-          url: https://kafka-schema-registry.nais-q.adeo.no
+          url:
       security:
         protocol:
       sasl:
