--- a/nais/naiserator.yml
+++ b/nais/naiserator.yml
@@ -16,6 +16,10 @@ spec:
         - host: www.googleapis.com
         - host: login.microsoftonline.com
         - host: kafka-schema-registry.nais-q.adeo.no
+          ports:
+            - port: 8443
+              name: kafka
+              protocol: TLS
         - host: api-gw-q1.oera.no
       {{#each kafkaBootstrapServers as |server|}}
         - host: {{server}}
