Ignorerer alarmerator i ci/cd

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -7,6 +7,7 @@ on:
       - '.gitignore'
       - 'LICENCE'
       - 'CODEOWNERS'
+      - '.github/workflows/apply-alerts.yml'
     branches:
 
 env:
