Tester problem-details i header

--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -25,6 +25,11 @@ no.nav:
     cors:
       allowed-origins: http://localhost:8080
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, prometheus
 
 spring:
   rest:
