Fikser docker-compose setup.

--- a/docker-compose-env/sif-innsyn-api.env
+++ b/docker-compose-env/sif-innsyn-api.env
@@ -4,6 +4,7 @@ SPRING_KAFKA_CONSUMER_BOOTSTRAP_SERVERS=kafka:9093
 SPRING_KAFKA_PROPERTIES_SECURITY_PROTOCOL=SASL_PLAINTEXT
 
 APIGW_API_KEY=x-nav-apiKey
+STS_APIKEY=x-nav-apiKey
 STS_USERNAME=igroup
 STS_PASSWORD=itest
 NAV_TRUSTSTORE_PATH=/etc/ssl/certs/java/cacerts
@@ -14,6 +15,7 @@ NO_NAV_SECURITY_JWT_ISSUER_SELVBETJENING_ACCEPTEDAUDIENCE=stubOidcClient
 NO_NAV_SECURITY_JWT_ISSUER_SELVBETJENING_COOKIE_NAME=selvbetjening-idtoken
 NO_NAV_SECURITY_JWT_ISSUER_SELVBETJENING_DISCOVERYURL=http://oidc-provider:9000/.well-known/openid-configuration
 NO_NAV_SECURITY_CORS_ALLOWED_ORIGINS=http://localhost:8080,http://localhost:1337
+NO_NAV_GATEWAYS_STS_URL=http://localhost:8080
 
 NAIS_DATABASE_SIF_INNSYN_API_SIF_INNSYN_DB_HOST=db
 NAIS_DATABASE_SIF_INNSYN_API_SIF_INNSYN_DB_PORT=5432
