Flytter listener properties for OmsorgspengerutbetalingArbeidstakerHendelseKonsument til config.

--- a/src/main/resources/application-dev-gcp.yml
+++ b/src/main/resources/application-dev-gcp.yml
@@ -33,9 +33,9 @@ topic:
       id: pp-sykt-barn-listener
       navn: privat-pleiepengesoknad-cleanup
       bryter: true
-    pleiepengesoknad-sykt-barn:
-      id: pp-sykt-barn-listener
-      navn: privat-pleiepengesoknad-cleanup
+    omp-utbetaling-arbeidstaker:
+      id: omp-utbetaling-arbeidstaker-listener
+      navn: privat-omp-utbetalingsoknad-arbeidstaker-cleanup
       bryter: true
 
 management:
