--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -26,6 +26,7 @@ no.nav:
       allowed-origins: http://localhost:8080
 
 topic:
+  # Bryter betegner av/på funksjon for kafkalytter. True (på), False (av).
   listener:
     pp-sykt-barn:
       id: pp-sykt-barn-listener
@@ -34,6 +35,10 @@ topic:
     omp-utbetaling-arbeidstaker:
       id: omp-utbetaling-arbeidstaker-listener
       navn: privat-omp-utbetalingsoknad-arbeidstaker-cleanup
+      bryter: true
+    omp-utbetaling-snf:
+      id: omp-utbetaling-snf-listener
+      navn: privat-omsorgspengerutbetalingsoknad-cleanup
       bryter: true
 
 management:
