--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -28,17 +28,28 @@ no.nav:
 topic:
   # Bryter betegner av/på funksjon for kafkalytter. True (på), False (av).
   listener:
+    # topic.listener.pp-sykt-barn
     pp-sykt-barn:
       id: pp-sykt-barn-listener
       navn: privat-pleiepengesoknad-cleanup
       bryter: true
+
+    # topic.listener.omp-utbetaling-arbeidstaker
     omp-utbetaling-arbeidstaker:
       id: omp-utbetaling-arbeidstaker-listener
       navn: privat-omp-utbetalingsoknad-arbeidstaker-cleanup
       bryter: true
+
+    # topic.listener.omp-utbetaling-snf
     omp-utbetaling-snf:
       id: omp-utbetaling-snf-listener
       navn: privat-omsorgspengerutbetalingsoknad-cleanup
+      bryter: true
+
+    # topic.listener.omp-utvidet-rett
+    omp-utvidet-rett:
+      id: omp-utvidet-rett-listener
+      navn: privat-omsorgspengesoknad-cleanup
       bryter: true
 
 management:
