Konfigurerer prod-profil og deployment. Default er all konsumering av topicene skrudd av.

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -77,16 +77,16 @@ jobs:
           RESOURCE: nais/naiserator.yml
           VARS: nais/dev-gcp.json
 
-#  deploy-prod-gcp:
-#    name: Deploy to prod-gcp
-#    if: startsWith(github.ref, 'refs/heads/master')  # If the branch is master
-#    needs: build-code-and-push-docker # Depends on build-code-and-push-docker job
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@v1
-#      - uses: nais/deploy/actions/deploy@v1
-#        env:
-#          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
-#          CLUSTER: prod-gcp
-#          RESOURCE: nais/naiserator.yml
-#          VARS: nais/prod-gcp.json
+  deploy-prod-gcp:
+    name: Deploy to prod-gcp
+    if: startsWith(github.ref, 'refs/heads/master')  # If the branch is master
+    needs: build-code-and-push-docker # Depends on build-code-and-push-docker job
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - uses: nais/deploy/actions/deploy@v1
+        env:
+          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
+          CLUSTER: prod-gcp
+          RESOURCE: nais/naiserator.yml
+          VARS: nais/prod-gcp.json
