Dev oppsett for prod (#2)
* Fikser docker-compose setup.

* Øker antall karakterer på aktør_id

* Flytter ut visse configurasjoner ut til nais config variabler.

* Tester at dittnav beskjed sendss ut.

* Flytter ut kafkalistener config ut til properties.

* Forkorter propertynavn

* Flytter listener properties for OmsorgspengerutbetalingArbeidstakerHendelseKonsument til config.

* Flytter listener properties for OmsorgspengerutbetalingSNFHendelseKonsument til config.

* Flytter listener properties for OmsorgspengerUtvidetRettHendelseKonsument til config.

* Lager default properties fil for properties.
Overstyrer default properties via profil.

* Flytter også spring.rest.* properties til default properties fil.

* Konfigurerer prod-profil og deployment.
Default er all konsumering av topicene skrudd av.

* Aktiverer alerterator for prod-gcp

* Fikser indent på property og fjerner gjentakende verdi.

* Fikser indent på property og fjerner gjentakende verdi.

* Dropp alt i q.

* Migrer aktør_id kolonne.

--- a/src/main/resources/application-prod-gcp.yml
+++ b/src/main/resources/application-prod-gcp.yml
@@ -1,11 +1,23 @@
+topic:
+  # Bryter betegner av/på funksjon for kafkalytter. True (på), False (av).
+  listener:
+    pp-sykt-barn:
+      bryter: false
+    omp-utbetaling-arbeidstaker:
+      bryter: false
+    omp-utbetaling-snf:
+      bryter: false
+    omp-utvidet-rett:
+      bryter: false
+
 management:
   endpoint:
     health:
-      show-details: always
+      show-details: never
 
 spring:
-  mvc:
-    log-request-details: true
+    mvc:
+      log-request-details: false
 
   kafka:
     properties:
@@ -28,6 +40,6 @@ spring:
 
     datasource:
       jpa:
-        show-sql: true
+        show-sql: false
         hibernate:
-          ddl-auto: drop
+          ddl-auto: none
