--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -1,11 +1,4 @@
 no.nav:
-  dittnav:
-    pleiepenger-sykt-barn:
-      beskjed:
-        grupperingsId: pleiepenger-sykt-barn
-        tekst: 'Vi har mottatt din søknad om pleiepenger. Klikk på linken for mer info.'
-        link: https://sif-innsyn.dev.nav.no/familie/sykdom-i-familien/soknad/innsyn
-        dagerSynlig: 7
   apigw:
     apikey: test-key
     sts-apikey: sts-apikey
@@ -25,19 +18,10 @@ no.nav:
     cors:
       allowed-origins: http://localhost:8080
 
-management:
-  endpoints:
-    web:
-      exposure:
-        include: health, prometheus
-
 spring:
-  rest:
-    retry:
-      multiplier: 2
-      initialDelay: 10
-      maxDelay: 40
-      maxAttempts: 3
+  profiles:
+    active: test
+
   datasource:
     url: jdbc:tc:postgresql:9.6:///
     driver-class-name: org.testcontainers.jdbc.ContainerDatabaseDriver
